@@ -29,6 +29,7 @@ Version 1.0.64 :
 - Stop Adjust In-Game Map Triggers now cause the minimap to immediately show updated entrances
 - Tiles are no longer added on the In-Game map during a teleportation to another chapter using Teleport To Chapter Triggers
 - Teleport To Other Side Portals no longer appear if the player enter the room they are in while carrying a Golden Strawberry
+- Bombs and Mega Bombs can no longer be hold by the player using the grab button when they are spawned, but still can after the bomb has been thrown at least once. The button to spawn a bomb still allows to hold them in both cases
 - Fixed a bug that prevented the "Golden Start With X" attributes to work correctly, removing abilities on room transition when holding a golden strawberry
 - Fixed a bug that prevented Flag On Interact Triggers to work if their "Req Flags" attribute was left empty
 - Fixed a bug that killed both Madeline and the Remote Drone at the same time if the player died while holding the drone
